<resources>
    <string name="app_name">Filmoteka</string>

    <!-- Labels -->
    <string name="spinner_status_label">Status</string>
    <string name="spinner_category_label">Category</string>

    <!-- Categories -->
    <string name="category_movie">Movie</string>
    <string name="category_series">Series</string>
    <string name="category_documentary">Documentary</string>
    <string name="category_none">None</string>
    <string name="category_all">All</string>

    <!-- Status -->
    <string name="status_watched">Watched</string>
    <string name="status_not_watched">Not watched</string>
    <string name="status_none">None</string>
    <string name="status_all">All</string>


    <!-- Delete -->
    <string name="confirm_delete_title">Delete Movie</string>
    <string name="confirm_delete_message">Are you sure you want to delete "%1$s" from your collection?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>


    <!-- Movie rating -->
    <string name="movie_not_rated">Not Rated</string>

    <!-- Validation Errors -->
    <string name="error_title_blank">Title cannot be blank</string>
    <string name="error_title_to_long">Tittle must be less than 300 characters</string>
    <string name="error_comment_too_long">Comment is too long</string>
    <string name="error_rating_invalid">Rating must be between 1 and 10</string>
    <string name="error_release_date_future">Release date cannot be more than 2 years in the future</string>
    <string name="error_movie_exists">A movie with this ID already exists</string>
    <string name="error_rating_required">Rating is required for watched movies</string>
    <string name="error_category_required">Category must be selected</string>
    <string name="error_poster_required">You must select a poster from the gallery</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="error_id_invalid">ID must be greater than 0</string>

    <!-- Movie Crud Errors -->
    <string name="error_movie_id_taken">Movie with this ID already exists</string>
    <string name="error_movie_create">Error creating movie</string>
    <string name="error_movie_update">Error updating movie</string>
    <string name="error_movie_delete">Error deleting movie</string>
    <string name="error_movie_not_found">Movie not found</string>
    <string name="error_status_not_selected">Status not selected</string>
    <string name="error_category_not_selected">Category not selected</string>
    <string name="error_rating_not_set_for_watched_movie">Rating not set for watched movie</string>



    <!-- UI -->
    <string name="button_add_movie">Add Movie</string>
    <string name="button_save_movie">Save Movie</string>
    <string name="dialog_delete_title">Delete movie</string>
    <string name="dialog_delete_message">Are you sure you want to remove this movie from your collection?</string>
    <string name="summary_placeholder">Showing %1$d movies</string>

    <!-- Filter -->
    <string name="filter_category">Category</string>
    <string name="filter_status">Status</string>

    <!-- Messages -->
    <string name="movie_added">Movie added successfully</string>
    <string name="no_movies_found">No movies found matching current filters</string>
    <string name="cannot_edit_watched">You cannot edit a movie that has already been marked as watched</string>
    <string name="movie_title">Movie Title</string>
    <string name="date_placeholder">2000–01–01</string>
    <string name="not_watched">NOT_WATCHED</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="filter_toggle">Toggle</string>
    <string name="choose_poster">Choose Poster</string>
    <string name="save">Save</string>
    <string name="comment">Comment</string>
    <string name="movie_premiere_date">"Premiere Date "</string>
    <string name="back">Back Button\n</string>
    <string name="already_watched">Can\'t Edit Watched Movie</string>
    <string name="movie_updated">Movie Updated</string>
    <string name="image_load_failed">Failed to load image</string>

</resources>
