<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_marginVertical="6dp"
                                   android:layout_marginHorizontal="8dp"
                                   android:elevation="4dp"
                                   android:padding="12dp"
                                   android:backgroundTint="@color/secondary">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/text"
                android:text="@string/movie_title"/>

        <TextView
                android:id="@+id/movie_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:text="@string/date_placeholder"/>

        <TextView
                android:id="@+id/movie_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:text="@string/not_watched"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
