<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".view.activity.MainActivity">

    <!-- AppBar Style Header -->
    <androidx.cardview.widget.CardView
            android:id="@+id/header_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/secondary"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical" tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_movie_logo"
                    android:contentDescription="@string/app_name"/>

            <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"/>
        </LinearLayout>

        <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:contentDescription="@string/filter_toggle"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/text"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_gravity="end"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:baselineAligned="false" android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical" app:layout_constraintTop_toBottomOf="@+id/header_card"
            app:layout_constraintBottom_toBottomOf="parent">

        <!-- Miniatura plakatu -->
        <FrameLayout
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/image_placeholder">

            <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/movie_poster" android:scaleType="centerCrop"/>

            <TextView
                    android:id="@+id/movie_poster_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text="@string/movie_title" android:textAlignment="center"/>
        </FrameLayout>


        <!-- Treść tekstowa -->
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title"
                    android:textColor="@color/text"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:maxLines="2"
                    android:ellipsize="end"/>

            <TextView
                    android:id="@+id/movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_placeholder"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>

            <!-- Kategorie, status, ocena -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:layout_marginEnd="8dp">

                <TextView
                        android:id="@+id/movie_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_movie"
                        android:textColor="@color/text"
                        android:textStyle="bold"
                        android:background="@drawable/status_badge"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="4dp"
                        android:textSize="12sp"
                        android:layout_marginEnd="8dp" android:textAlignment="center"/>

                <TextView
                        android:id="@+id/movie_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_watched"
                        android:textColor="@color/text"
                        android:textStyle="bold"
                        android:background="@drawable/status_badge"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="4dp"
                        android:textSize="12sp"
                        android:layout_marginEnd="8dp" android:textAlignment="center"/>

            </LinearLayout>
            <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_not_rated"
                    android:textColor="@color/text"
                    android:textStyle="bold"
                    android:background="@drawable/rating_badge"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
